k8s/oauth2-proxy/oauth2-proxy.yaml
---
# Source: oauth2-proxy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy    
    helm.sh/chart: oauth2-proxy-10.7.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: authentication-proxy
    app.kubernetes.io/part-of: oauth2-proxy
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: oauth2-proxy
    app.kubernetes.io/version: "7.15.3"
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  type: ClusterIP
  ports:
    - port: 4180
      targetPort: http
      protocol: TCP
      appProtocol: http
      name: http
    - port: 44180
      protocol: TCP
      appProtocol: http
      targetPort: metrics
      name: metrics
  selector:    
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: oauth2-proxy
---
# Source: oauth2-proxy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy    
    helm.sh/chart: oauth2-proxy-10.7.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: authentication-proxy
    app.kubernetes.io/part-of: oauth2-proxy
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/instance: oauth2-proxy
    app.kubernetes.io/version: "7.15.3"
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:      
      app.kubernetes.io/name: oauth2-proxy
      app.kubernetes.io/instance: oauth2-proxy
  template:
    metadata:
      annotations:
        checksum/config: 052b3706583beb7047e0b3b36032555fdf49a204a18c93f7097d078005c2b9bf
        checksum/secret: bc51d28490f7963a08cc40ecbe74f45bb9587d9b8ac9591b0797b4537d2ade01
        checksum/google-secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/redis-secret: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
      labels:
        app: oauth2-proxy        
        helm.sh/chart: oauth2-proxy-10.7.0
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: authentication-proxy
        app.kubernetes.io/part-of: oauth2-proxy
        app.kubernetes.io/name: oauth2-proxy
        app.kubernetes.io/instance: oauth2-proxy
        app.kubernetes.io/version: "7.15.3"
    spec:
      serviceAccountName: oauth2-proxy
      enableServiceLinks: true
      automountServiceAccountToken: true
      containers:
      - name: oauth2-proxy
        image: "quay.io/oauth2-proxy/oauth2-proxy:v7.15.3"
        imagePullPolicy: IfNotPresent
        args:
          - --http-address=0.0.0.0:4180
          - --https-address=0.0.0.0:4443
          - --metrics-address=0.0.0.0:44180
          - --code-challenge-method=S256
          - --cookie-domain=.kubequest.epitech.beer
          - --email-domain=*
          - --oidc-issuer-url=https://dex.kubequest.epitech.beer
          - --pass-access-token=true
          - --provider=oidc
          - --redirect-url=https://auth.kubequest.epitech.beer/oauth2/callback
          - --reverse-proxy=true
          - --set-xauthrequest=true
          - --whitelist-domain=.kubequest.epitech.beer
          - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
        ports:
          - containerPort: 4180
            name: http
            protocol: TCP
          - containerPort: 44180
            protocol: TCP
            name: metrics
        livenessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /ready
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 5
          successThreshold: 1
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 64Mi
          requests:
            cpu: 25m
            memory: 32Mi
        volumeMounts:
        - mountPath: /etc/oauth2_proxy/oauth2_proxy.cfg
          name: configmain
          subPath: oauth2_proxy.cfg
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 2000
          runAsNonRoot: true
          runAsUser: 2000
          seccompProfile:
            type: RuntimeDefault
      volumes:
      - configMap:
          defaultMode: 420
          name: oauth2-proxy
        name: configmain
